--- a/themes/lpgn/layouts/_default/single.html
+++ b/themes/lpgn/layouts/_default/single.html
@@ -3,7 +3,7 @@
   <div class="reading-width">
 
     {{- if eq .Section "blog" -}}
-    <a href="{{ "/blog/" | relLangURL }}" class="back-link">&#8592; Blog</a>
+    <a href="/blog/" class="back-link">&#8592; Blog</a>
     {{- end -}}
 
     <header class="page-header">
