--- a/themes/lpgn/layouts/partials/head.html
+++ b/themes/lpgn/layouts/partials/head.html
@@ -10,13 +10,14 @@
   {{- end -}}
 </title>
 
-{{ with .Description }}<meta name="description" content="{{ . }}">{{ end }}
+{{- $desc := coalesce .Description .Site.Params.description -}}
+{{ with $desc }}<meta name="description" content="{{ . }}">{{ end }}
 <meta name="author" content="{{ .Site.Title }}">
 
 <link rel="canonical" href="{{ .Permalink }}">
 
 <meta property="og:title" content="{{ .Title }}">
-{{ with .Description }}<meta property="og:description" content="{{ . }}">{{ end }}
+{{ with $desc }}<meta property="og:description" content="{{ . }}">{{ end }}
 <meta property="og:url" content="{{ .Permalink }}">
 <meta property="og:site_name" content="{{ .Site.Title }}">
 <meta property="og:type" content="{{ if .IsPage }}article{{ else }}website{{ end }}">
